Too large grids were overflowing, fixed it.

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,8 +1,8 @@
 @import "./base.css";
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  /* max-width: 1280px; */
+  margin: 0 2em;
   padding: 2rem;
   max-height: 100vh;
   font-weight: normal;
